crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_comments.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 Module level import not at top of file
 --> E402_comments.py:5:1
  |
3 | print("something")
4 |
5 | import last
  | ^^^^^^^^^^^
6 |
7 | import late  # comment-late
  |
help: Move module level imports to top of file

E402 Module level import not at top of file
 --> E402_comments.py:7:1
  |
5 | import last
6 |
7 | import late  # comment-late
  | ^^^^^^^^^^^
8 |
9 | from late_paren1 import (  # comment-late_paren1
  |
help: Move module level imports to top of file

E402 Module level import not at top of file
  --> E402_comments.py:9:1
   |
 7 |   import late  # comment-late
 8 |
 9 | / from late_paren1 import (  # comment-late_paren1
10 | |     value
11 | | )
   | |_^
12 |
13 |   from late_paren2 import (
   |
help: Move module level imports to top of file

E402 Module level import not at top of file
  --> E402_comments.py:13:1
   |
11 |   )
12 |
13 | / from late_paren2 import (
14 | |     value  # comment-late_paren2
15 | | )
   | |_^
16 |
17 |   from late_paren3 import (
   |
help: Move module level imports to top of file

E402 Module level import not at top of file
  --> E402_comments.py:17:1
   |
15 |   )
16 |
17 | / from late_paren3 import (
18 | |     value
19 | | )  # comment-late_paren3
   | |_^
20 |
21 |   from late_paren4 import (
   |
help: Move module level imports to top of file

E402 Module level import not at top of file
  --> E402_comments.py:21:1
   |
19 |   )  # comment-late_paren3
20 |
21 | / from late_paren4 import (
22 | |     value1,
23 | |     value2,  # comment-late_paren4
24 | |     value3,
25 | | )
   | |_^
   |
help: Move module level imports to top of file
