crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_docstring.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 Module level import not at top of file
 --> E402_docstring.py:5:1
  |
3 | print("something")
4 |
5 | import os
  | ^^^^^^^^^
6 |
7 | # Prevent F403
  |
help: Move module level imports to top of file
