crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E501_E501_3.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501 Line too long (89 > 88)
  --> E501_3.py:11:89
   |
10 | # Error (89 characters)
11 | "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:aaaa"  # type: ignore
   |                                                                                         ^
12 |
13 | # OK (88 characters)
   |

E501 Line too long (89 > 88)
  --> E501_3.py:17:89
   |
16 | # Error (89 characters)
17 | "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:aaaa"  # pyrefly: ignore[missing-attribute]
   |                                                                                         ^
   |
