crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E701_E70.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E701 Multiple statements on one line (colon)
 --> E70.py:2:5
  |
2 | if a: a = False
  |     ^
  |

E701 Multiple statements on one line (colon)
 --> E70.py:4:40
  |
4 | if not header or header[:6] != 'bytes=': return
  |                                        ^
  |

E701 Multiple statements on one line (colon)
  --> E70.py:25:8
   |
25 | if True: x; y;
   |        ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:27:8
   |
27 | if True: lambda a: b
   |        ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:29:10
   |
29 | if a := 1: pass
   |          ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:31:4
   |
31 | try: lambda foo: bar
   |    ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:32:18
   |
32 | except ValueError: pass
   |                  ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:33:8
   |
33 | finally: pass
   |        ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:35:8
   |
35 | class C: pass
   |        ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:37:9
   |
37 | with C(): pass
   |         ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:39:15
   |
39 | async with C(): pass
   |               ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:54:8
   |
54 | class C: ...; x = 1
   |        ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:56:8
   |
56 | class C: ...; ...
   |        ^
   |

E701 Multiple statements on one line (colon)
  --> E70.py:59:12
   |
59 |     case 0,: y = 0
   |            ^
   |
