crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E702_E70.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E702 Multiple statements on one line (semicolon)
 --> E70.py:6:10
  |
6 | a = False; b = True
  |          ^
  |

E702 Multiple statements on one line (semicolon)
 --> E70.py:8:17
  |
8 | import bdist_egg; bdist_egg.write_safety_flag(cmd.egg_info, safe)
  |                 ^
  |

E702 Multiple statements on one line (semicolon)
  --> E70.py:12:9
   |
12 | del a[:]; a.append(42);
   |         ^
   |

E702 Multiple statements on one line (semicolon)
  --> E70.py:25:11
   |
25 | if True: x; y;
   |           ^
   |

E702 Multiple statements on one line (semicolon)
  --> E70.py:54:13
   |
54 | class C: ...; x = 1
   |             ^
   |

E702 Multiple statements on one line (semicolon)
  --> E70.py:56:13
   |
56 | class C: ...; ...
   |             ^
   |

E702 Multiple statements on one line (semicolon)
  --> E70.py:65:4
   |
65 |   1;...
   |    ^
   |
